main/default/objects/Account_Loss_Detail__c/Account_Loss_Detail__c.object-meta.xml
<CustomObject>
    <label>Account Loss Detail</label>
    <nameField>
        <displayFormat>ALD-{000}</displayFormat>
        <label>Account Loss Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Loss Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>