main/default/objects/Account_Loss_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Loss Details</relationshipLabel>
    <relationshipName>Account_Loss_Details</relationshipName>
    <type>Lookup</type>
</CustomField>