main/default/objects/Account_Loss_Detail__c/fields/Number_of_Losses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Losses__c</fullName>
    <label>Number of Losses</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>