main/default/objects/Account_Loss_Detail__c/fields/Number_of_Open_Losses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Losses__c</fullName>
    <label>Number of Open Losses</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>