main/default/objects/Account_Loss_Detail__c/validationRules/Year_must_be_a_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_must_be_a_number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
LEN(Year__c) &gt; 0,  
NOT(ISNUMBER(Year__c))
)</errorConditionFormula>
    <errorMessage>Year must contain numbers only</errorMessage>
</ValidationRule>